# HeightMapPathCode

./: .gitignore  CMakeLists.txt  README.md
input/: BH_1024.off  BH_1024.xyz  EP_10000.off  EP_10000.xyz  EP_1024.off  EP_1024.xyz  EP_20164.off  EP_20164.xyz  EP_30276.off  EP_30276.xyz  EP_40000.off  EP_40000.xyz  EP_50176.off  EP_50176.xyz  GF_1024.off  GF_1024.xyz  LM_1024.off  LM_1024.xyz  RM_1024.off  RM_1024.xyz
output/: output.txt
src/: algorithms.h  geodesic_algorithm_exact.h  geodesic_algorithm_graph_base.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h  geodesic_mesh.h  geodesic_mesh_elements.h  height_map.h  helper.h  main.cpp  point_cloud.h  simple_global_function.h  stb_image.h
